src/objects/SSC_PriorQuarterScore__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SSC_PriorQuarterScore</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Controlled_Shipping__c</fullName>
        <label>Controlled Shipping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GenerationDate__c</fullName>
        <label>Generation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L3SubMetricName__c</fullName>
        <label>L3 SubMetric Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScoreOverrides__c</fullName>
        <label>Score Overrides</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SubMetric_Name__c</fullName>
        <label>SubMetric Name</label>
        <referenceTo>SSC_SubMetric__c</referenceTo>
        <relationshipName>SSC_PriorQuarterScore</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VsCompetetorField__c</fullName>
        <label>Vs Competetor Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Supplier Prior Quarter Score</label>
    <nameField>
        <label>Supplier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Prior Quarter Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>